fix text wrap in yellow and gray status bubbles

--- a/apps/src/templates/rubrics/rubrics.module.scss
+++ b/apps/src/templates/rubrics/rubrics.module.scss
@@ -1268,7 +1268,7 @@ p.detailsHidden {
   border-radius: 20px;
   padding: 5px 10px 0;
   height: 22px;
-  min-width: 80px;
+  min-width: 82px;
   display: inline;
   margin-right: 17px;
   p {
@@ -1307,7 +1307,7 @@ p.detailsHidden {
   border-radius: 20px;
   padding: 5px 10px 0;
   height: 22px;
-  min-width: 80px;
+  min-width: 87px;
   display: inline;
   margin-right: 17px;
   p {
